DP-14173: Fix icon spacing and capitalization.

--- a/assets/scss/04-templates/_services.scss
+++ b/assets/scss/04-templates/_services.scss
@@ -29,6 +29,10 @@
         margin-top: 15px;
       }
     }
+
+    .ma__download-link__icon {
+      width: 45px;
+    }
   }
 
   .ma__stacked-row-section {
